- Logo link is now non refresh
- First 2 locationbar elements are now non refresh
- Post is now reloaded after editing it.
- Post is now reloaded after a login / logout
- Post edit text now has the correct color.

+

- Added a add post image icon button which later will link to the new page for that specific secondary subject.
- CSS changes which were needed for contentView
- Fixed collapse not being rotated anymore.

+
