@@ -74,7 +74,7 @@ class PostPageView extends View
 
 	private function createEditView(array $data, Post $post) : string
 	{
-		$editButtonDataArgument = $data["PrimarySubject"] . "," . $data["SecondarySubject"] . "," . $data["postID"] . ",edit";
+		$editButtonDataArgument = $data["PrimarySubject"] . "," . $data["SecondarySubject"] . "," . $data["postID"] . ",delete";
 		$saveButtonDataArgument =  $data["PrimarySubject"] . "," . $data["SecondarySubject"] . "," . $data["postID"] . ",save,\" + document.getElementById(\"editedContent\").value";
 		$view = "
 		<div class='postContainer'>
